--- a/Project Solutions/SPR/SPR/frontend/Views/SPR/Index.cshtml
+++ b/Project Solutions/SPR/SPR/frontend/Views/SPR/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Index";
 }
 @section HeaderTag{
@@ -34,11 +33,11 @@
             </div>
         </row>
     </div>
-<div class="row">
-    <div class="col-md-12">
-        <h5>Pencarian SPR</h5>
-        <div class="card">
-            <div class="card-body">
+    <div class="row">
+        <div class="col-md-12">
+            <h5>Pencarian SPR</h5>
+            <div class="card">
+                <div class="card-body">
                     <label for="pencarianSelect" class="form-label">Pencarian Berdasarkan</label>
                     <select id="pencarianSelect" class="form-select" aria-label="Pilih">
                         <option value="1" selected>KODE SPR</option>
@@ -46,76 +45,140 @@
                         <option value="3">Tanggal Permintaan</option>
                         <option value="4">Zona</option>
                     </select>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="row">
+    <div class="row">
 
         <table id="tableSPR" class="display">
-        <thead>
-            <tr>
-                <th>Kode SPR </th>
-                <th>Zona</th>
-                <th>Tanggal SPR</th>
-                <th>Tujuan SPR</th>
-                <th>Nama Peminta</th>
-                <th>Nama Penyetuju 1 </th>
-                <th>Nama Penyetuju 2</th>
-                <th>Ada Detil</th>
-                <th>Status</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Kode SPR </th>
+                    <th>Zona</th>
+                    <th>Tanggal SPR</th>
+                    <th>Tujuan SPR</th>
+                    <th>Nama Peminta</th>
+                    <th>Nama Penyetuju 1 </th>
+                    <th>Nama Penyetuju 2</th>
+                    <th>Ada Detil</th>
+                    <th>Status</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-</div>
+    </div>
 
 
     <!-- Modal -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                    <h5 class="modal-title" id="staticBackdropLabel">Ajukan SPR</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <form class="row g-1 needs-validation" novalidate>
+                        <div class="col-md-4">
+                            <label for="validationCustom01" class="form-label">First name</label>
+                            <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <label for="validationCustom02" class="form-label">Last name</label>
+                            <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <label for="validationCustomUsername" class="form-label">Username</label>
+                            <div class="input-group has-validation">
+                                <span class="input-group-text" id="inputGroupPrepend"></span>
+                                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+                                <div class="invalid-feedback">
+                                    Please choose a username.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="validationCustom03" class="form-label">City</label>
+                            <input type="text" class="form-control" id="validationCustom03" required>
+                            <div class="invalid-feedback">
+                                Please provide a valid city.
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <label for="validationCustom04" class="form-label">State</label>
+                            <select class="form-select" id="validationCustom04" required>
+                                <option selected disabled value="">Choose...</option>
+                                <option>...</option>
+                            </select>
+                            <div class="invalid-feedback">
+                                Please select a valid state.
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <label for="validationCustom05" class="form-label">Zip</label>
+                            <input type="text" class="form-control" id="validationCustom05" required>
+                            <div class="invalid-feedback">
+                                Please provide a valid zip.
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                                <label class="form-check-label" for="invalidCheck">
+                                    Agree to terms and conditions
+                                </label>
+                                <div class="invalid-feedback">
+                                    You must agree before submitting.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <button class="btn btn-primary" type="submit">Submit form</button>
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Reset</button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Understood</button>
+                    <button type="button" class="btn btn-primary">Simpan</button>
                 </div>
             </div>
         </div>
     </div>
 
 
-@section Scripts{
+    @section Scripts{
 
-    <script src="https://cdn.datatables.net/2.1.8/js/dataTables.js"></script>
-    <script>
-        console.log("Custome Js here");        
-    </script>
+        <script src="https://cdn.datatables.net/2.1.8/js/dataTables.js"></script>
+        <script>
+            console.log("Custome Js here");
+        </script>
         <script src="~/js/_Helper.js"></script>
         <script src="~/js/ProyekSelect.js"></script>
         <script src="~/js/SPRDataTable.js"></script>
 
 
-}
+    }
