--- a/Project Solutions/SPR/SPR/frontend/Views/SPR/Index.cshtml
+++ b/Project Solutions/SPR/SPR/frontend/Views/SPR/Index.cshtml
@@ -91,74 +91,80 @@
         <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Ajukan SPR</h5>
+                    <h5 class="modal-title" id="staticBackdropLabel">Ajukan SPR Material</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form class="row g-1 needs-validation" novalidate>
-                        <div class="col-md-4">
-                            <label for="validationCustom01" class="form-label">First name</label>
-                            <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <label for="validationCustom02" class="form-label">Last name</label>
-                            <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <label for="validationCustomUsername" class="form-label">Username</label>
-                            <div class="input-group has-validation">
-                                <span class="input-group-text" id="inputGroupPrepend"></span>
-                                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-                                <div class="invalid-feedback">
-                                    Please choose a username.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="validationCustom03" class="form-label">City</label>
-                            <input type="text" class="form-control" id="validationCustom03" required>
-                            <div class="invalid-feedback">
-                                Please provide a valid city.
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <label for="validationCustom04" class="form-label">State</label>
-                            <select class="form-select" id="validationCustom04" required>
-                                <option selected disabled value="">Choose...</option>
-                                <option>...</option>
-                            </select>
-                            <div class="invalid-feedback">
-                                Please select a valid state.
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <label for="validationCustom05" class="form-label">Zip</label>
-                            <input type="text" class="form-control" id="validationCustom05" required>
-                            <div class="invalid-feedback">
-                                Please provide a valid zip.
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                                <label class="form-check-label" for="invalidCheck">
-                                    Agree to terms and conditions
-                                </label>
-                                <div class="invalid-feedback">
-                                    You must agree before submitting.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <button class="btn btn-primary" type="submit">Submit form</button>
-                        </div>
-                    </form>
+                    <form class="row g-3 needs-validation" id="sprForm" novalidate>
+    <div class="col-md-12">
+        <label for="tanggalMinta" class="form-label">Tanggal Minta</label>
+        <input type="text" class="form-control datepicker" id="tanggalMinta" placeholder="Select Date">
+        <div class="invalid-feedback">
+            Please select a valid date.
+        </div>
+    </div>
+    
+    <div class="col-md-12">
+        <label for="zonaSPR" class="form-label">Zona SPR</label>
+        <input type="text" class="form-control" id="zonaSPR" value="000" required>
+        <div class="invalid-feedback">
+            Please provide a valid zone.
+        </div>
+    </div>
+    
+    <div class="col-md-12">
+        <label for="tujuanSPR" class="form-label">Tujuan SPR</label>
+        <input type="text" class="form-control" id="tujuanSPR" value="Logistik Proyek" required>
+        <div class="invalid-feedback">
+            Please provide a valid purpose.
+        </div>
+    </div>
+
+    <div class="col-md-12">
+        <label for="materialId" class="form-label">Material</label>
+        <select class="form-select" id="materialId" required>
+            <option selected disabled value="">Choose Material...</option>
+            <!-- Options will be populated via AJAX -->
+        </select>
+        <div class="invalid-feedback">
+            Please select a valid material.
+        </div>
+    </div>
+
+    <div class="col-md-6">
+        <label for="volume" class="form-label">Volume</label>
+        <input type="number" class="form-control" id="volume" value="5" required>
+        <div class="invalid-feedback">
+            Please provide a valid volume.
+        </div>
+    </div>
+
+    <div class="col-md-6">
+        <label for="unit" class="form-label">Unit</label>
+        <select class="form-select" id="unit" required>
+            <option selected disabled value="">Choose Unit...</option>
+            <option value="Unit 1">Unit 1</option>
+            <option value="Unit 2">Unit 2</option>
+            <option value="Unit 3">Unit 3</option>
+        </select>
+        <div class="invalid-feedback">
+            Please select a valid unit.
+        </div>
+    </div>
+
+    <div class="col-md-12">
+        <label for="tanggalRencanaTerima" class="form-label">Tanggal Rencana Terima</label>
+        <input type="text" class="form-control datepicker" id="tanggalRencanaTerima" placeholder="Select Date">
+        <div class="invalid-feedback">
+            Please select a valid date.
+        </div>
+    </div>
+
+    <div class="col-12">
+        <button class="btn btn-primary" type="submit">Submit form</button>
+    </div>
+</form>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Reset</button>
@@ -179,6 +185,7 @@
         <script src="~/js/_Helper.js"></script>
         <script src="~/js/ProyekSelect.js"></script>
         <script src="~/js/SPRDataTable.js"></script>
+        <script src="~/js/MintaSPRForm.js"></script>
 
 
     }
