udah bisa tampilkan modal Detil test

--- a/Project Solutions/SPR/SPR/frontend/Views/SPR/Index.cshtml
+++ b/Project Solutions/SPR/SPR/frontend/Views/SPR/Index.cshtml
@@ -18,7 +18,8 @@
 </div>
 
 <!-- Modal -->
-@Html.Partial("Modal")
+@Html.Partial("ModalFormSPR")
+@Html.Partial("Detil/ModalListDetilSPR")
 
 
 @section Scripts{
@@ -33,4 +34,6 @@
     <script src="~/js/ProyekSelect.js"></script>
     <script src="~/js/SPRDataTable.js"></script>
     <script src="~/js/MintaSPRForm.js"></script>
+    <script src="~/js/DetilDataTable.js"></script>
+
     }
