--- a/Project Solutions/SPR/SPR/frontend/Views/SPR/DetailInformasiUser.cshtml
+++ b/Project Solutions/SPR/SPR/frontend/Views/SPR/DetailInformasiUser.cshtml
@@ -12,6 +12,7 @@
     <row>
         <div class="d-grid gap-2 mt-1">
             <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Ajukan SPR</button>
+            <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#modalDetil">Test Modal Detil</button>
         </div>
     </row>
 </div>
