tampil detail sudah

--- a/Project Solutions/SPR/SPR/frontend/Views/SPR/Index.cshtml
+++ b/Project Solutions/SPR/SPR/frontend/Views/SPR/Index.cshtml
@@ -11,7 +11,7 @@
     @Html.Partial("DetailInformasiUser")
 </div>
 <div class="row">
-    @Html.Partial("Searching")
+    @*@Html.Partial("Searching")*@
 </div>
 <div class="row">
     @Html.Partial("TableSPR")
