--- a/Project Solutions/SPR/SPR/frontend/Views/SPR/Detil/TableDetil.cshtml
+++ b/Project Solutions/SPR/SPR/frontend/Views/SPR/Detil/TableDetil.cshtml
@@ -2,7 +2,7 @@
     <thead>
         <tr>
             <th>Id</th>
-            <th>Tanggal Rencana terima</th>
+            <th>Tanggal Rencana Terima</th>
             <th>Material</th>
             <th>Tipe Material</th>
             <th>Volume</th>
