--- a/Project Solutions/SPR/SPR/frontend/Views/SPR/DetailInformasiUser.cshtml
+++ b/Project Solutions/SPR/SPR/frontend/Views/SPR/DetailInformasiUser.cshtml
@@ -11,8 +11,10 @@
     </row>
     <row>
         <div class="d-grid gap-2 mt-1">
+            <button class="btn btn-outline-primary" type="button" data-bs-toggle="modal" data-bs-target="#modalTambahProyek">Tambah Proyek</button>
             <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Ajukan SPR</button>
-            <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#modalDetil">Test Modal Detil</button>
+            @*<button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#modalTambahMateril">Tambah Materil</button>*@
+            @*<button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#modalTambahMateril">Approval SPR</button>*@
         </div>
     </row>
 </div>
